# flight-api

./: .gitignore  Cargo.toml  README.md  config.toml  flights.sqlite
assets/: database.sql  flights.db
src/: controller.rs  database.rs  main.rs  schema.rs
